<resources>
    <string name="app_name">Sports Statistics Application</string>

    <string name="home_button">Begin</string>
    <string name="dummy_content">\nDUMMY CONTENT\n</string>
    <string name="microphone">microphone</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="stop">STOP</string>
    <string name="undo">UNDO</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="send">send</string>
    <string name="default_score" translatable="false">0–00</string>
    <string name="help">HELP</string>
    <string name="close">close</string>
    <string name="TopText">Recent Stats:</string>
    <string name="message">"To use this app, you need to say three commands to log a stat.\n First, you say the team name if it is a one word name or either \"left\" or \"right\" to denote the team on the left or right, then you say the player number, then you say the keyword for the stat in the glossary below:\n
        goal from play\t- goal\n
        point from play\t- point\n
        goal from a placed ball\t- goal free\n
        point from a placed ball\t- point free\n
        wide ball\t- wide\n
        ball short to goalkeeper\t- short\n
        possession won\t- turnover\n
        pass completed\t- pass\n
        possession lost\t- loss\n
        foul awarded\t- award\n
        foul committed\t- concede\n
        65 won\t- behind\n
        yellow card awarded\t- yellow\n
        straight red card awarded\t- red.\n
        For example,\n 'left 11 point'\n will log a point to the number 11 on the team on the left hand side of the screen,
        and 'Kilkenny 14 goal free' will log a goal from a placed ball for Kilkenny's number 14.
        "</string>
    <string name="speech_prompt">Speak Stat…</string>

    <string name="title_activity_table">tableActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="view_data">View\n
                             Data</string>
</resources>
